# fixit-chat

./: .env.example  .gitignore  CHEATSHEET.md  CLAUDE.md  INSTALL.md  Makefile  PLAN.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  presentation-v2.html  presentation.html
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3c2cfcc416f4_initial.py  a1f9e3b72d44_add_session_ratings_table.py  b83e212317f3_add_close_message_to_settings.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/cli/: __init__.py  __main__.py  commands.py
backend/app/core/: database.py  encryption.py  exceptions.py  redis.py  security.py
backend/app/middleware/: brute_force.py  cors.py  ip_whitelist.py  rate_limit.py  security_headers.py
backend/app/models/: __init__.py  agent.py  attachment.py  base.py  login_attempt.py  message.py  note.py  rating.py  session.py  settings.py
backend/app/repositories/: __init__.py  agent_repo.py  base.py  login_attempt_repo.py  message_repo.py  note_repo.py  rating_repo.py  session_repo.py  settings_repo.py
backend/app/schemas/: agent.py  attachment.py  auth.py  message.py  note.py  session.py  settings.py  stats.py
backend/app/services/: auth_service.py  encryption_service.py  file_service.py  glpi_service.py  message_service.py  notification_service.py  session_service.py
backend/tests/: conftest.py
backend/tests/test_api/: test_auth.py  test_health.py  test_sessions.py  test_widget.py
backend/tests/test_security/: test_security.py
(+74 files in other folders)
